# Thinkboard

./: README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json
Backend/: Cargo.toml  schema.md  tests.md
Backend/src/: main.rs
Frontend/: .gitignore  index.html  package.json
Frontend/src/: App.vue  app2.vue  cloud.vue  logsign.vue  sidepan.vue  style.css
Frontend/src/components/: ActionBar.vue  Circularallan.vue  ContextMenu.vue  KeyboardShortcutsHelp.vue  LineConnector.vue  MiniMap.vue  SearchBar.vue  allancolumn1.vue  rectangle.vue  rectanglenode.vue  textinputallan.vue
Frontend/src/services/: api.service.js  node.service.js
Frontend/src/stores/: user.js  userStore.js
Frontend/src/types/: index.js
