[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
gemini-rust = "0.4.2"
mongodb = "3.2.3"
serde = "1.0.219"
tokio = "1.45.0"
serde_json = "1.0.140"
chrono = "0.4.41"
uuid = "1.16.0"
